--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
+  "scripts": {
+    "dev":"nodemon server.js",
+    "start": "node server.js"
+  },
   "dependencies": {
     "axios": "^1.6.7",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.0"
   }
 }
